  "end of browser session" before).
  [lgraf]

- OrgUnitSelector: Store selected OrgUnit after determining fallback.
  [lgraf]

- Rewrite advancedsearch to fix an issue with invalid requests to the search view.
  It is now allowed to filter by min or max value instead of just by date ranges
  (min and max) when querying for dates.
  [deiferni]


4.1.0 (2014-12-18)
------------------

- Made the AddPublicTrialColumn more robust.
  [phgross]

- Dropped no longer used document state journalization.
  [phgross]

- Disable docproperty updating in YearfolderStorer process.
  [phgross]

- Improved repository deletion (it's now possible without folder_contents view):
    - Revoke list folder contents permission on repository.
    - Add repository delete action and confirmation view.
    - Adjust global role mapping for delete objects permission.
    - Adjust delete objects permission for repositories.
    - Revoke delete objects permission for dossiers.
    - Added monkeypatch for _verifyObjectPaste to allow moving content without
      delete objects permission.

  [phgross]

- Implements content removal functionality for documentish objects:
    - Add new permission `Remove GEVER content`.
    - Added new document workflow state `document-state-removed`.
    - Added new mail workflow state `mail-state-removed`.
    - Add new action `Remove` to trash tab and add remove confirmation view.
    - Added journalization for document removing and restoring.

  [phgross]

- Rewrite gever setup.
    - Introduce two zcml directives to configure deployments and ldap profiles.
    - Simplify deloyment form, remove multi-client configuration options.
    - Update branding, add onegovgever logo.
    - Add custom setuphandlers for local roles, initial repository and document templates.
    - Configure development options and add environment variable to enable them easily.

  [deiferni]

- Disable nested inboxes.
  [deiferni]


4.0.6 (2014-12-09)
------------------
