@@ -82,6 +82,9 @@ Changelog
   (min and max) when querying for dates.
   [deiferni]
 
+- Fix an issue with username/contacts-name based sorting in tabbedviews.
+  [deiferni]
+
 
 4.1.0 (2014-12-18)
 ------------------
